# scipion-em-protenix

./: pyproject.toml
protenix/: __init__.py  constants.py  protocols.conf
protenix/protocols/: protocol_protenix.py
protenix/viewers/: viewer.py  viwer_dos.py
protenix/wizards/: wizard_protenix.py
scipion_em_protenix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
